# advent_of_code_2020

./: Cargo.toml  bacon.toml
src/: day01.rs  day02.rs  main.rs
src/day02/: input.rs  mod.rs  password_policy.rs  tester.rs
src/day03/: mod.rs  rider.rs
src/day03/rider/: coordinate.rs  map.rs  mod.rs  tile.rs
src/day04/: mod.rs  passport.rs  passport_strict.rs  passports.rs  passports_strict.rs
src/day05/: mod.rs  seating.rs
src/day06/: answers.rs  mod.rs
src/day07/: bag.rs  mod.rs
src/day08/: handheld.rs  mod.rs
src/day09/: mod.rs  xmas.rs
src/template/: mod.rs
