[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.9"
scan_fmt = "0.2"
thiserror = "1"
rayon = "1"

[profile.bench]
codegen-units = 1
lto = true

[profile.release]
codegen-units = 1
lto = true
